Pagina de torcida e camisas criada

--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -25,6 +25,8 @@
                     <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
                     <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
                     <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+                 <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+                 <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
             </nav>
             <hr>
             <section>
@@ -71,6 +73,6 @@
             </section>
         </main>
         <hr>
-        <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
+        <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
