--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -27,6 +27,8 @@
             <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
             <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
             <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+         <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+         <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
     </nav>
     <main>
     <hr>
@@ -43,7 +45,7 @@
         </article>
         <article>
             <ul>
-                <li><span style="color: #cd0000;">1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
+                <li><span style="   color: #cd0000;">1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
                 <li><span style="color: #cd0000;">1914 -</span> Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
                 <li><span style="color: #cd0000;">1918 -</span> Teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê. </li>
                 <li><span style="color: #cd0000;">1930 -</span> Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”. </li>
@@ -62,6 +64,6 @@
     </section>
     <hr>
     </main>
-    <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
+    <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
 </body>
 </html>
