--- a/paginas/mascote.html
+++ b/paginas/mascote.html
@@ -18,12 +18,14 @@
     <main>
         <nav>
             || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-            <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-            <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-            <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
+                <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
+                <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+                <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+             <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+             <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
         </nav>
         <hr>
         <section>
