--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -22,12 +22,14 @@
         </header>
         <nav>
             || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                    <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                    <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                    <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                    <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                    <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                    <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
+                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
+                <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
+                <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+                <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+             <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+             <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
         </nav>
         <main>
             <hr>
@@ -117,6 +119,6 @@
             </table>
         </main>
         <hr>
-        <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
+        <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
     </body>
 </html>
