--- a/paginas/idolos1.html
+++ b/paginas/idolos1.html
@@ -19,13 +19,15 @@
         <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
     </header>
     <nav>
-        ||  <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
+        || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
             <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
             <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
             <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
             <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
             <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
             <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+         <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+         <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
     </nav>
     <main>
     <hr>
@@ -90,6 +92,6 @@
     </section>
     <hr>
     </main>
-    <footer>Copyright © 2023 Altaneiro. Todos os direitos reservados.</footer>
+    <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
 </body>
 </html>
