--- a/paginas/Hino.html
+++ b/paginas/Hino.html
@@ -24,9 +24,9 @@
                     <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
                     <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
                     <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+                    <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+                    <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
                     <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
-                 <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-                 <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
             </nav>
             <hr>
             <section>
@@ -34,7 +34,7 @@
                     <h2>HINO</h2>
                     <hr>
                     <img src="../Imagens/cantandohino.jpg" title="cantandohino" alt="não carregou" width="400"/>
-                    <h1 style="color:#cd0000;">O PRIMEIRO HINO</h1>
+                    <h1 style="color:darkred">O PRIMEIRO HINO</h1>
                     <p>"Salve o Corinthians, o campeão dos campeões". O hino do Corinthians nem sempre começou com esse famoso verso. Em 1930, a primeira composição dedicada ao clube era intitulada como uma "marchinha". Oferecido ao presidente Felipe Collona, que dirigiu o Timão entre 1929 e 1930, o primeiro hino da história foi gravado pela dupla Guarani e Pirajá. A música, escrita por La Rosa e letrada por Eduardo Dohmen, permanece eternizada pelo vocabulário e gênero musical típico.</p>
                     <P>Luctar… Luctar…<br>
                         É nosso lema sempre, para a glória,<br>
@@ -51,7 +51,7 @@
                     <hr>
                 </article>
                 <article>
-                    <h1 style="color: #cd0000;">HINO ATUAL</h1>
+                    <h1 style="color:darkred">HINO ATUAL</h1>
                     <p>O segundo e atual hino do Timão foi composto pelo radialista Lauro D'Avila em 1953. Com uma letra muito próxima ao que a torcida sentia em relação ao Corinthians, o hino rapidamente ficou marcado, ao contrário do primeiro, que, aos poucos, ficou no anonimato. Gravado pela primeira vez nos estúdios da Rádio Bandeirantes e lançado pela gravadora Continental, sob a voz cantor Osny Silva, "O Campeão dos Campeões" permanece até hoje entoado nos estádios em que o Timão joga.</p> 
                     <p>Salve o Corinthians<br>
                         O campeão dos campeões<br>
