--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -26,9 +26,9 @@
             <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
             <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
             <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+            <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+            <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
             <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
-         <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-         <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
     </nav>
     <main>
     <hr>
@@ -36,11 +36,11 @@
         <article>
             <h2>CRIAÇÃO</h2>
             <hr>
-            <h1 style="color:#cd0000;">O TIME DO POVO</h1>
+            <h1 style="color:darkred;">O TIME DO POVO</h1>
             <img src="../Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
             <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio, Raphael Perrone e mais 8 sócios, fundaram o Sport Club Corinthians Paulista, o nome foi inspirado no time inglês, Corinthian-Casuals Football Club, que nessa ocasião estava fazendo uma expedição em São Paulo.</p>
             <hr>
-            <h2><span style="color: #cd0000;">Linha do Tempo</span></h2>
+            <h2><span style="color: darkred;">Linha do Tempo</span></h2>
             <img src="../Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
         </article>
         <article>
