--- a/paginas/torcida.html
+++ b/paginas/torcida.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Corinthians - O Maior Clube do Brasil</title>
+    <title>VAI CORINTHIANS</title>
     <style>
       blockquote {
   font-style: italic;
@@ -53,12 +53,13 @@
             <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
             <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
             <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
+            <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
+            <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
             <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
-         <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-         <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
     </nav>
+    <hr>
     <main>
-        <h1 style="color: black";>TORCIDA!</h1>
+        <h1 style="color: black";>TORCIDA</h1>
         <hr>
 
         <section>
@@ -76,7 +77,7 @@
             <p>O Grêmio Gaviões da Fiel Torcida é reconhecido como a maior torcida organizada do Sport Club Corinthians Paulista, e também é considerada a maior organizada em todo o Brasil. Com um número impressionante de 115 mil sócios registrados em dezembro de 2018, a torcida possui uma extensa rede de atuação que inclui uma sede social e dez subsedes, distribuídas em nove cidades brasileiras e uma localizada no Japão. Suas fontes de receita abrangem mensalidades, operações de bares, cantinas, lojas físicas e virtuais, além de eventos relacionados ao clube.
 
                 No contexto do Carnaval, os Gaviões da Fiel se destacam com sua atuação desde 1975, quando criaram o Bloco Carnavalesco. Nesse período, conquistaram impressionantes 12 títulos em 13 anos de participação no Carnaval. Em 1988, receberam o convite da Liga das Escolas de Samba para competir no grupo especial, onde também se destacaram, conquistando quatro títulos no Carnaval de São Paulo. Com um desfile que envolveu 3.500 componentes em 2019, eles se tornaram a atração com a maior audiência televisiva e a maior torcida presente no Anhembi. A fonte de receita para essa atividade inclui patrocínios e ensaios preparatórios.</p>
-                <img src="/Imagens/gavioes.jpeg" width="700"/>
+                <img src="../Imagens/gavioes.jpeg" width="700"/>
             <hr>
 
             <h2>Mundial de 2012</h2>
@@ -89,7 +90,7 @@
                 <footer>Tite, técnico do Corinthians em 2012</footer>
               </blockquote>
               
-            <img src="/Imagens/mundial.png" title:="no Japão 2012" alt="Corinthians no Japão 2012" width="700"/>
+            <img src="../Imagens/mundial.png" title:="no Japão 2012" alt="Corinthians no Japão 2012" width="700"/>
 
         </section>
         <hr>
