--- a/paginas/Titulos.html
+++ b/paginas/Titulos.html
@@ -3,45 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>VAI CORINTHIANS</title>
-        <style>
-
-            table {
-                width: 45%;
-            }
-            table, th, tr, td {
-                border: 1px solid black
-            }
-
-        </style>
+        <link rel="stylesheet" href="../estilos/estilos.css">
     </head>
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
             <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>
-            <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
         <nav>
-            || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-                <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-                <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+            ||  <a href="../paginas/index.html">História</a> ||
+                <a href="../paginas/idolos.html">Ídolos</a> ||
+                <a href="../paginas/titulos.html">Títulos</a> ||
+                <a href="../paginas/hino.html">Hino</a> ||
+                <a href="../paginas/escudo.html">Escudo</a> ||
+                <a href="../paginas/mascote.html">Mascote</a> ||
+                <a href="../paginas/camisas.html">Camisas</a> ||
+                <a href="../paginas/torcida.html">Torcida</a> ||
+                <a href="../paginas/contato.html">Contato</a> ||
         </nav>
         <main>
             <hr>
-            <h2>SALA DE TROFÉUS</h2>
+            <h2 class="black">SALA DE TROFÉUS</h2>
             <hr>
             <img src="../Imagens/saladetrofeusverdadeira.jpg" title="trofeus" alt="não carregou" width="500"/>
             <table>
                 <thead>
                     <tr>
-                        <th style="color: #cd0000">Competições</th>
-                        <th style="color: #cd0000;">Títulos</th>
-                        <th style="color: #cd0000;">Temporadas</th>
+                        <th>Competições</th>
+                        <th>Títulos</th>
+                        <th>Temporadas</th>
                     </tr>
                 </thead>
                 <tbody>
