--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -3,44 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>VAI CORINTHIANS</title>
-        <style>
-            p{
-                font-size:larger
-            }
-            label{
-                width: 300px;
-                height: 150px;
-            }
-        </style>
+        <link rel="stylesheet" href="../estilos/estilos.css">
     </head>
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
             <img src="../Imagens/altaneira.jpeg" alt="altaneira" title="curinthia" width="500">
-            <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
         <main>
             <section>
                 <nav>
-                    || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                        <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                        <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                        <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                        <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                        <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                        <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-                        <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-                        <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+                    ||  <a href="../paginas/index.html">História</a> ||
+                        <a href="../paginas/idolos.html">Ídolos</a> ||
+                        <a href="../paginas/titulos.html">Títulos</a> ||
+                        <a href="../paginas/hino.html">Hino</a> ||
+                        <a href="../paginas/escudo.html">Escudo</a> ||
+                        <a href="../paginas/mascote.html">Mascote</a> ||
+                        <a href="../paginas/camisas.html">Camisas</a> ||
+                        <a href="../paginas/torcida.html">Torcida</a> ||
+                        <a href="../paginas/contato.html">Contato</a> ||
                 </nav>
                 <hr>
                 <article>
-                    <h2>CONTATE-NOS</h2>
+                    <h2 class="black">CONTATE-NOS</h2>
                     <hr>
                     <img src="../Imagens/gaviaodafiel.jpeg" title="gaviaodafiel" alt="gaviao" width="350">
                     <form>
-                        <label style="width: 15%;">Nome</label>
+                        <label class="nome">Nome</label>
                         <input type=text/><br>
-                        <label style="width: 20%;">email</label>
+                        <label class="email">e-mail</label>
                         <input type="text"/><br>
                         <label>Sexo</label>
                         <input type="text"/><br>
