--- a/paginas/escudo.html
+++ b/paginas/escudo.html
@@ -3,36 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <title>VAI CORINTHIANS</title>
-        <style>
-            h2{
-                color:darkred
-            }
-            p{
-                font-size:larger
-            }
-        </style>
+        <link rel="stylesheet" href="../estilos/estilos.css">
     </head>
     <body>
         <header>
             <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
             <img src="../Imagens/altaneira.jpeg" alt="nao carregou" title="curinthia" width="500">
-            <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
         </header>
         <main>
             <nav>
-                || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                    <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                    <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                    <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                    <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                    <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                    <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-                    <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-                    <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+                ||  <a href="../paginas/index.html">História</a> ||
+                    <a href="../paginas/idolos.html">Ídolos</a> ||
+                    <a href="../paginas/titulos.html">Títulos</a> ||
+                    <a href="../paginas/hino.html">Hino</a> ||
+                    <a href="../paginas/escudo.html">Escudo</a> ||
+                    <a href="../paginas/mascote.html">Mascote</a> ||
+                    <a href="../paginas/camisas.html">Camisas</a> ||
+                    <a href="../paginas/torcida.html">Torcida</a> ||
+                    <a href="../paginas/contato.html">Contato</a> ||
             </nav>
             <section>
                 <hr>
-                <h1>ESCUDOS</h1>
+                <h1 class=" titulo">ESCUDOS</h1>
                 <hr>
                 <p>A história do escudo do Corinthians começa muito antes dele sequer existir e é completamente ligada às raízes do clube. Isso porque, apesar de ter sido fundado em 1º de setembro de 1910, o Corinthians ficou sem um símbolo por três anos. Durante todo esse tempo, era entendido que o time, formado por trabalhadores, era de várzea e não se enquadrava nos padrões de uma equipe de elite no Brasil.</p>
                 <hr>
