--- a/paginas/camisas.html
+++ b/paginas/camisas.html
@@ -3,108 +3,104 @@
 <head>
     <meta charset="UTF-8"/>
     <title>VAI CORINTHIANS</title>
-    <style>
-        p {
-            font-size: larger;
-        }
-        ul {
-            font-size: larger;
-        }
-        h1 {
-            color: darkred;
-        }
-        hr {
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
     <header>
-        <h1 style="color: black;">SPORT CLUB CORINTHIANS PAULISTA</h1>
+        <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
         <img src="../Imagens/altaneira.jpeg" title="Corinthians" alt="Não carregou" width="500"/>            
-        <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
     </header>
     <nav>
-        || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-            <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-            <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-            <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-            <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-            <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+        ||  <a href="../paginas/index.html">História</a> ||
+            <a href="../paginas/idolos.html">Ídolos</a> ||
+            <a href="../paginas/titulos.html">Títulos</a> ||
+            <a href="../paginas/hino.html">Hino</a> ||
+            <a href="../paginas/escudo.html">Escudo</a> ||
+            <a href="../paginas/mascote.html">Mascote</a> ||
+            <a href="../paginas/camisas.html">Camisas</a> ||
+            <a href="../paginas/torcida.html">Torcida</a> ||
+            <a href="../paginas/contato.html">Contato</a> ||
     </nav>
     <main>
         <hr>
         <section>
-            <h2>HISTÓRIA DAS CAMISAS DO CORINTHIANS</h2>
+            <h2 class="black">HISTÓRIA DAS CAMISAS DO CORINTHIANS</h2>
             <hr>
 
             <p>O Sport Club Corinthians Paulista tem uma longa história de camisas icônicas que representam o clube. Abaixo, destacamos alguns dos momentos mais marcantes na história das camisas do Corinthians:</p>
 
             <hr>
 
-            <h1>1910</h1>
+            <article>
+            <h2>1910</h2>
             <h3>Camisa Inicial Bege</h3>
             <p>A primeira camisa oficial do Corinthians era na cor bege, uma homenagem ao Corinthian FC. No entanto, devido ao desbotamento do tecido bege após algumas lavagens, o clube optou por adotar definitivamente camisas brancas.</p>
             <img src="../Imagens/Jogadores_do_Corinthians,_1933.tif.jpg" title="Jogadores_do_Corinthians" alt="puts" width="400"/>
-
+            </article>
             <hr>
 
-            <h1>1920</h1>
+            <article>
+            <h2>1920</h2>
             <h3>Transição para Camisa Branca</h3>
             <p>A partir de 1920, o Corinthians começou a jogar com camisas brancas e calções pretos, tornando-se o uniforme oficial. Isso aconteceu quando o clube conseguiu recursos para comprá-los.</p>
-
+            </article>
             <hr>
 
-            <h1>Variações na Camisa</h1>
+            <article>
+            <h2>Variações na Camisa</h2>
 
             <p>Ao longo dos anos, o Corinthians fez algumas modificações na camisa, incluindo versões listradas em preto e branco, camisas pretas e uma com uma faixa branca com o nome do clube, especialmente usada em clássicos contra São Paulo e Santos.</p>
             <img src="../Imagens/Evolução_Uniforme_Corinthians.png" title="EvoluçãoCamisas" alt="não carregou" width="400"/>
-
+            </article>    
             <hr>
 
-            <h1>1946</h1>
+            <article>
+            <h2>1946</h2>
             <h3>Números nas Camisas</h3>
             <p>Em 1946, o Corinthians introduziu números nas camisas pela primeira vez em um amistoso contra o River Plate. Isso se tornou obrigatório no Campeonato Paulista de 1948.</p>
             <img src="../Imagens/1946.jpg" title="1946" alt="pois é" width="400" />
-
+            </article>
             <hr>
 
-            <h1>1949</h1>
+            <article>
+            <h2>1949</h2>
             <h3>Camisa Grená</h3>
             <p>Em 1949, o clube usou uma camisa grená em homenagem ao Torino, que sofreu um acidente de avião em Turim.</p>
             <img src="../Imagens/turin.jpg" title="turin" alt="nao carregou" width="400"/>
-
+            </article>
             <hr>
 
-            <h1>1965</h1>
+            <article>
+            <h2>1965</h2>
             <h3>Camisa Azul para a Seleção</h3>
             <p>Em 1965, o Corinthians usou a camisa azul da seleção brasileira em um amistoso contra o Arsenal, em Londres.</p>
             <img src="../Imagens/azul.jpeg" title="azul" alt="nao carregou" width="400"/>
-
+            </article>
             <hr>
 
-            <h1>1995</h1>
+            <article>
+            <h2>1995</h2>
             <h3>Modelos Alternativos</h3>
             <p>A partir de 1995, o clube começou a investir em modelos alternativos de uniformes. Isso incluiu camisas desenvolvidas por estilistas estrangeiros e diferentes cores, como preto, cinza e amarelo.</p>
             <img src="../Imagens/japao.webp" title="japao" alt="nao carregou" width="400"/>
-
+            </article>
             <hr>
 
-            <h1>2008</h1>
+            <article>
+            <h2>2008</h2>
             <h3>Camisa Roxa</h3>
             <p>Em 2008, o Corinthians lançou uma camisa roxa, que se tornou popular entre os torcedores, apesar das pressões das torcidas uniformizadas.</p>
             <img src="../Imagens/roxa.jpg" title="roxa" alt="nao carregou" width="400"/>
-
+            </article>
             <hr>
 
-            <h1>2010</h1>
+            <article>
+            <h2>2010</h2>
             <h3>Centenário do Clube</h3>
             <p> Em 2010, o Corinthians lançou uma camisa em comemoração ao centenário do clube, que remetia ao primeiro uniforme usado em 1910, com a cor bege e o escudo com as letras "CP".</p>
             <img src="../Imagens/centenario.jpg" title="centenario" alt="nao carregou" width="400"/>
-
+            </article>
             </section>
             <hr>
             <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
