--- a/paginas/idolos.html
+++ b/paginas/idolos.html
@@ -3,39 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>VAI CORINTHIANS</title>
-    <style>
-        p {
-            font-size:larger
-        }
-        ul {
-            font-size:larger
-        }
-    </style>
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
     <header>    
         <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
         <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-        <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
     </header>
     <nav>
-        || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-            <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-            <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-            <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-            <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-            <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+        ||  <a href="../paginas/index.html">História</a> ||
+            <a href="../paginas/idolos.html">Ídolos</a> ||
+            <a href="../paginas/titulos.html">Títulos</a> ||
+            <a href="../paginas/hino.html">Hino</a> ||
+            <a href="../paginas/escudo.html">Escudo</a> ||
+            <a href="../paginas/mascote.html">Mascote</a> ||
+            <a href="../paginas/camisas.html">Camisas</a> ||
+            <a href="../paginas/torcida.html">Torcida</a> ||
+            <a href="../paginas/contato.html">Contato</a> ||
     </nav>
     <main>
     <hr>
     <section>
-            <h2>MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
+            <h2 class="black">MAIORES ÍDOLOS DA HISTÓRIA DO CORINTHIANS</h2>
             <hr>
             <article>
-                <h2 style="color:darkred;">"Gigante" Cássio</h2>
+                <h2>"Gigante" Cássio</h2>
                 <img src="../Imagens/cassio.jpg" title="cassio" alt="nao carregou" width="350">
                 <p>Cássio Roberto Ramos começou sua carreira na base do Grêmio e passou pelo PSV antes de chegar no Corinthians no final de 2011. Seu apelido de "Gigante" não é à toa, já que, desde que chegou é um dos jogadores mais decisivos nesses 12 anos de casa.</p>
                 <p>Seus maiores momentos de glória foram em 2012, nesse ano foi peça fundamental para a conquista do tão cobiçado título inédito da Libertadores, onde fez sua defesa mais famosa no chute de Diego Souza contra o Vasco na semi-final da Libertadores, defesa essa, que se não tivesse ocorrido mudaria totalmente a história do Corinthians nos anos seguintes. Posteriormente, após a vitória contra o Chelsea da Inglaterra, se consagrou como melhor jogador da competição, que consagrou o Timão como bicampeão do Mundial de Clubes.</p> 
@@ -51,7 +44,7 @@
         </article>
         <hr>
         <article>
-            <h2 style="color:darkred">"Doutor" Sócrates</h2>
+            <h2>"Doutor" Sócrates</h2>
             <img src="../Imagens/socrates.jpg" title="socrates" alt="nao carregou" width="350">
             <p>Sócrates Brasileiro Sampaio de Souza Vieira de Oliveira, conhecido como "Doutor" Sócrates, devido sua forma inteligente e elegante que jogava, além do fato de ser formado em medicina, foi um dos maiores e mais importantes jogadores brasileiros da história. </p>
             <p>Era chamado de craque por causa de sua técnica e  visão de jogo, além de sua genialidade de dar passes de calcanhar como ninguém. Constantemente, convocado pela seleção brasileira, atuou no Corinthians entre 1978-1984, onde conquistou 3 títulos Paulistas e ficou muitíssimo marcado pela sua icônica comemoração, onde erguia o punho para o alto, porém sua importância histórica vai muito além dos gramados.</p> 
@@ -66,7 +59,7 @@
         </article>
         <hr>
         <article>
-            <h2 style="color:darkred;">PÉ DE ANJO</h2>
+            <h2>PÉ DE ANJO</h2>
             <img src="../Imagens/marcelinho.jpeg" alt="nao carrregou" title="marcelinho" width="350">
             <p>"Quero marcar minha passagem aqui. Vim para o Corinthians para ser campeão!". Essas foram as palavras de Marcelinho Carioca quando chegou no Corinthians, com 23 anos e calçando 35. Tal frase que se tornou um fato, já que, Marcelinho é um dos jogadores mais vitoriosos do Corinthians com 10 títulos.</p>
             <p>Considerado um dos brasileiros que mais dominava a arte de cobrar faltas, seu primeiro e centésimo gols no Timão foram de bola parada. Também ficou famoso pelos gols marcados em momentos decisivos, como quando fez 2 gols contra o Grêmio na final da Copa do Brasil de 1995.</p>
@@ -83,7 +76,7 @@
         <hr>
         <article>
             <ol>
-                <h2 style="color:darkred">MENÇÕES HONROSAS</h2>
+                <h2>MENÇÕES HONROSAS</h2>
                 <li ><scan  style="color:darkred">Craque Neto -</scan> Importantíssimo na conquista do primeiro Campeonato Brasileiro em 1990, ficou marcado pela sua habilidade e facilidade em cobrar faltas.</li>
                 <li><scan style="color:darkred">Casa Grande -</scan> Marcado pela sua raça dentro de campo e pela sua participação ativa na Democracia Corinthiana.</li>
                 <li><scan  style="color:darkred">Wladimir -</scan> Possui 806 partidas, sendo assim, o jogador que mais vezes vestiu a camisa do Corinthians,</li>
