--- a/paginas/index.html
+++ b/paginas/index.html
@@ -3,49 +3,41 @@
 <head>
     <meta charset="UTF-8"/>
     <title>VAI CORINTHIANS</title>
-    <style>
-        p {
-            font-size:larger
-        }
-        ul {
-            font-size:larger
-        }
-        
-    </style>
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
     <header>
         <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
         <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-        <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>
+        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
     </header>
     <nav>
-        || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-            <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-            <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-            <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-            <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-            <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-            <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-            <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+        ||  <a href="../paginas/index.html">História</a> ||
+            <a href="../paginas/idolos.html">Ídolos</a> ||
+            <a href="../paginas/titulos.html">Títulos</a> ||
+            <a href="../paginas/hino.html">Hino</a> ||
+            <a href="../paginas/escudo.html">Escudo</a> ||
+            <a href="../paginas/mascote.html">Mascote</a> ||
+            <a href="../paginas/camisas.html">Camisas</a> ||
+            <a href="../paginas/torcida.html">Torcida</a> ||
+            <a href="../paginas/contato.html">Contato</a> ||
     </nav>
     <main>
     <hr>
     <section>   
         <article>
-            <h2>CRIAÇÃO</h2>
+            <h2 class="black">CRIAÇÃO DO TIMÃO</h2>
             <hr>
-            <h1 style="color:darkred;">O TIME DO POVO</h1>
+            <h2>O TIME DO POVO</h2>
             <img src="../Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
             <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio, Raphael Perrone e mais 8 sócios, fundaram o Sport Club Corinthians Paulista, o nome foi inspirado no time inglês, Corinthian-Casuals Football Club, que nessa ocasião estava fazendo uma expedição em São Paulo.</p>
             <hr>
-            <h2><span style="color: darkred;">Linha do Tempo</span></h2>
+            <h2>Linha do Tempo</h2>
             <img src="../Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
         </article>
-        <article>
+        <article>   
             <ul>
-                <li><span style="   color: #cd0000;">1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
+                <li><span style="color:#cd0000;">1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
                 <li><span style="color: #cd0000;">1914 -</span> Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
                 <li><span style="color: #cd0000;">1918 -</span> Teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê. </li>
                 <li><span style="color: #cd0000;">1930 -</span> Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”. </li>
