--- a/paginas/mascote.html
+++ b/paginas/mascote.html
@@ -3,45 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>VAI CORINTHIANS</title>
-    <style>
-        p{
-            font-size:larger
-        }
-    </style>
+    <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
     <header>
         <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
         <img src="../Imagens/altaneira.jpeg" alt="nao carregou" title="curinthia" width="500">
-        <h2 style="color: red;">"SEMPRE ALTANEIRO"</h2>      
+        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>      
     </header>
     <main>
         <nav>
-            || <a style="color: goldenrod;" href="../paginas/historia.html">História</a> ||
-                <a style="color: goldenrod;" href="../paginas/idolos1.html">Ídolos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Titulos.html">Títulos</a> ||
-                <a style="color: goldenrod;" href="../paginas/Hino.html">Hino</a> ||
-                <a style="color: goldenrod;" href="../paginas/escudo.html">Escudo</a> ||
-                <a style="color: goldenrod;" href="../paginas/mascote.html">Mascote</a> ||
-                <a style="color: goldenrod;" href="../paginas/camisas.html">Camisas</a> ||
-                <a style="color: goldenrod;" href="../paginas/torcida.html">Torcida</a> ||
-                <a style="color: goldenrod;" href="../paginas/contato.html">Contato</a> ||
+            ||  <a href="../paginas/index.html">História</a> ||
+                <a href="../paginas/idolos.html">Ídolos</a> ||
+                <a href="../paginas/titulos.html">Títulos</a> ||
+                <a href="../paginas/hino.html">Hino</a> ||
+                <a href="../paginas/escudo.html">Escudo</a> ||
+                <a href="../paginas/mascote.html">Mascote</a> ||
+                <a href="../paginas/camisas.html">Camisas</a> ||
+                <a href="../paginas/torcida.html">Torcida</a> ||
+                <a href="../paginas/contato.html">Contato</a> ||
         </nav>
         <hr>
         <section>
-            <h1>O MOSQUETEIRO CORINTHIANO</h1>
+            <h1 class=" titulo">O MOSQUETEIRO CORINTHIANO</h1>
             <hr>
             <p>Existem duas versões sobre a origem do Mosqueteiro Corinthiano. Sinônimo de fibra, garra e valentia, o mascote caiu como uma luva para o time do Parque São Jorge. O Corinthians, que já nasceu lutando contra as dificuldades dos operários em jogar futebol, tinha tudo para ser uma equipe guerreira.</p>
             <article>
                 <hr>
-                <h2 style="color: darkred;">Primeira Versão</h2>
+                <h2>Primeira Versão</h2>
                 <img src="../Imagens/mosqueteiro1.jpg" title="mosqueteirocorinthiano" alt="mosqueteiro" width="200">
                 <p>Como tinham outros times disputando a vaga, o plantel alvinegro participou de um torneio contra o Minas Gerais e o antigo São Paulo, clubes também da várzea. Foi com um placar de 1 a 0 que o Corinthians derrotou o Minas e, logo em seguida, massacrou o São Paulo com quatro bolas na rede. Com isso, o Timão entrou na Divisão Especial da Liga, em 1914.
                 </p>
             </article>
             <hr>
             <article>
-                <h2 style="color: darkred;">Segunda Versão</h2>
+                <h2>Segunda Versão</h2>
                 <img src="../Imagens/mosqueteiro.jpeg" title="mosqueteirocorinthiano" alt="mosqueteiro" width="200">
                 <p>Em fevereiro de 1929, o Corinthians conquistou sua primeira vitória internacional em um amistoso contra o Barracas, da Argentina, com um placar de 3 a 1 no Parque São Jorge. Essa partida histórica ficou marcada pela intensa determinação de ambos os times em vencer, com Thomaz Mazzoni, um cronista da Gazeta Esportiva, comparando os jogadores corinthianos a mosqueteiros valentes, destacando sua força e coragem. A partir desse momento, o Mosqueteiro se tornou o símbolo do Corinthians, representando sua inteligência, habilidade e fibra.</p>
             </article>
