--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,36 +6,40 @@
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 <body>
-    <header>
-        <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
-        <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
-        <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
-    </header>
-    <nav>
-        ||  <a href="../paginas/index.html">História</a> ||
-            <a href="../paginas/idolos.html">Ídolos</a> ||
-            <a href="../paginas/titulos.html">Títulos</a> ||
-            <a href="../paginas/hino.html">Hino</a> ||
-            <a href="../paginas/escudo.html">Escudo</a> ||
-            <a href="../paginas/mascote.html">Mascote</a> ||
-            <a href="../paginas/camisas.html">Camisas</a> ||
-            <a href="../paginas/torcida.html">Torcida</a> ||
-            <a href="../paginas/contato.html">Contato</a> ||
-    </nav>
+    <div class = cabecalho>
+        <header>
+            <h1>SPORT CLUB CORINTHIANS PAULISTA</h1>
+            <img src="../Imagens/altaneira.jpeg" title= "curinthia" alt="nao carregou" width="500"/>            
+            <h2 class="altaneiro">"SEMPRE ALTANEIRO"</h2>
+        </header>
+         <nav>
+            ||  <a href="../paginas/index.html">História</a> ||
+                <a href="../paginas/idolos.html">Ídolos</a> ||
+                <a href="../paginas/titulos.html">Títulos</a> ||
+                <a href="../paginas/hino.html">Hino</a> ||
+                <a href="../paginas/escudo.html">Escudo</a> ||
+                <a href="../paginas/mascote.html">Mascote</a> ||
+                <a href="../paginas/camisas.html">Camisas</a> ||
+                <a href="../paginas/torcida.html">Torcida</a> ||
+                <a href="../paginas/contato.html">Contato</a> ||
+        </nav>
+    </div>
     <main>
     <hr>
     <section>   
         <article>
-            <h2 class="black">CRIAÇÃO DO TIMÃO</h2>
+            <h2 class="black" style="text-align:center">CRIAÇÃO DO TIMÃO</h2>
             <hr>
             <h2>O TIME DO POVO</h2>
             <img src="../Imagens/lampiao.jpg" title="timao" alt="nao carregou" width="350">
             <p>Às 20h30 do dia 1º de setembro, à luz de um lampião, na esquina das ruas José Paulino e Cônego Martins, no bairro do Bom Retiro, o grupo de operários formado por Anselmo Corrêa, Antônio Pereira, Carlos Silva, Joaquim Ambrósio, Raphael Perrone e mais 8 sócios, fundaram o Sport Club Corinthians Paulista, o nome foi inspirado no time inglês, Corinthian-Casuals Football Club, que nessa ocasião estava fazendo uma expedição em São Paulo.</p>
             <hr>
-            <h2>Linha do Tempo</h2>
-            <img src="../Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350">
+            <h2 style="text-align: center;" >Linha do Tempo</h2>
+        <div class="imagen">
+            <img src="../Imagens/criação.jpeg" title="criacao" alt="nao carregou" width="350"> 
+        </div>
         </article>
-        <article>   
+        <!-- <article>   
             <ul>
                 <li><span style="color:#cd0000;">1910 -</span> No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</li>
                 <li><span style="color: #cd0000;">1914 -</span> Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos. </li>
@@ -52,9 +56,101 @@
                 <li><span style="color: #cd0000;">2012 -</span> Um dos anos mais inesquecíveis da história do clube, com a conquista invicta de sua primeira Libertadores e o BiMundial.</li>
                 <li><span style="color: #cd0000;">2017 -</span> Na primeira temporada de Fábio Carille como treinador corinthiano, o Timão conquistou o 28º título paulista e o 7º Brasileirão de sua história. Apontado como uma das equipes mais frágeis entre os grandes no início da temporada, o Timão venceu o torneio estadual após o eliminar o São Paulo nas semifinais e bater a Ponte Preta na decisão. </li>
             </ul>
-        </article>
+        </article> -->
     </section>
-    <hr>
+    
+
+    <div class="container">
+        <div class="timeline">
+          <ul>
+            <li>
+              <div class="timeline-content">
+                <h1 class="cor">1910</h1>
+                <p>No dia 10 de Setembro disputou sua primeira partida contra o União da Lapa, time que foi fundado no mesmo dia do gigante paulista, a primeira escalação da história do clube foi: Valente, Atílio, Lepre, Alfredo, Police, João da Silva, Jorge Campbell, Fabbi, César Nunes, Joaquim Ambrósio e Rafael Perrone.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h1 class="cor">1914</h1>
+                <p>Conquista seu primeiro título na história, o Campeonato Paulista de Futebol, fazendo uma campanha perfeito com 10 vitórias em 10 jogos.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h1 class="cor">1918</h1>
+                <p>Teve seu primeiro estádio, Ponte Grande, a casa do Timão ficava onde hoje é a Ponte das Bandeiras, na Marginal Tietê.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h1 class="cor">1930</h1>
+                <p>Fechou a década com seis conquistas do Campeonato Paulista em 10 disputados. Foi o segundo tricampeonato alvinegro. Logo depois, o Corinthians venceu o Vasco, campeão carioca, por 3 a 2. Por conta desse resultado, passou a ser chamado de “Campeão dos Campeões”.</p>
+              </div>
+            </li>
+            <li>
+                <div class="timeline-content">
+                  <h1 class="cor">1977</h1>
+                  <p>Após uma partida conta a Ponte Preta por 1x0, gol de Basílio, o Corinthians acaba com o jejum de 22 anos sem ganhar um título Paulista.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">1982</h1>
+                  <p>O ano da Democracia Corintihiana, um dos movimentos mais importantes da história do clube alvinegro, visava maior participação dos jogadores e demais empregados do clube nas decisões do Departamento de Futebol.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">1990</h1>
+                  <p>Conseguiu se primeiro título Brasileiro.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2007</h1>
+                  <p>Um dos anos mais tristes e importantes na história do clube, pois foi rebaixado para a série B, mas mesmo assim a torcida sempre estava ao lado do time apoiando.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2008</h1>
+                  <p>O Corinthians é campaão da série B e consegue o acesso para a 1º divisão.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2009</h1>
+                  <p>Com a chegada de Ronaldo Fenômeno o Timão conquista um Campeonato Paulista e uma Copa do Beasil.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2010</h1>
+                  <p>Ano do centenário do clube, onde 100 mil corinthianos lotaram o Anhangabaú para as comemorações de aniversário.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2011</h1>
+                  <p>Pentacampeão Brasileiro.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2012</h1>
+                  <p>Um dos anos mais inesquecíveis da história do clube, com a conquista invicta de sua primeira Libertadores e o BiMundial.</p>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-content">
+                  <h1 class="cor">2017</h1>
+                  <p>Na primeira temporada de Fábio Carille como treinador corinthiano, o Timão conquistou o 28º título paulista e o 7º Brasileirão de sua história. Apontado como uma das equipes mais frágeis entre os grandes no início da temporada, o Timão venceu o torneio estadual após o eliminar o São Paulo nas semifinais e bater a Ponte Preta na decisão.</p>
+                </div>
+              </li>    
+          </ul>
+        </div>
+      </div>
+<hr>
     </main>
     <footer>Copyright © 2013-2023 Altaneiro. Todos os direitos reservados.</footer>
 </body>
